tests/snapshots/examples_fixtures/basics__bug_strings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/bug_strings.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/bug_strings.flx:3:1
  |
3 | print(greeting)
  | ^^^^^^^^^^^^^^^
  | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/bug_strings.flx:3:1
  |
3 | print(greeting)
  | ^^^^^^^^^^^^^^^
  | --------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/bug_strings.flx:4:1
  |
4 | print("This is a #{message}")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/bug_strings.flx:5:1
  |
5 | print("HELLO WORLD")
  | ^^^^^^^^^^^^^^^^^^^^
  | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 4 errors.
== stdout ==
<not executed>
