tests/snapshots/examples_fixtures/basics__contact_book.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/contact_book.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
