tests/snapshots/examples_fixtures/basics__do_block.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/do_block.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/do_block.flx:14:1
   |
14 | print(y)
   | ^^^^^^^^
   | -------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/do_block.flx:14:1
   |
14 | print(y)
   | ^^^^^^^^
   | -------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/do_block.flx:21:1
   |
21 | print(z)
   | ^^^^^^^^
   | -------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/do_block.flx:32:1
   |
32 | print(branch)
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/do_block.flx:42:1
   |
42 | print(m)
   | ^^^^^^^^
   | -------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/do_block.flx:46:1
   |
46 | print(h["a"])
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 6 errors.
== stdout ==
<not executed>
