tests/snapshots/examples_fixtures/basics__non_zero_division.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/non_zero_division.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
