tests/snapshots/examples_fixtures/basics__pipe_operator.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/pipe_operator.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode call target binding
== stdout ==
<not executed>
