tests/snapshots/examples_fixtures/basics__record_patterns.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/record_patterns.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
