tests/snapshots/examples_fixtures/basics__record_punning.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/record_punning.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
